--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=NicolasFreitas1_prova02-integration-test-NicolasFreitas
-sonar.organization=Nicolas
+sonar.organization=nicolasfreitas1
 sonar.projectName=Jest Integration Tests
 sonar.projectVersion=1.0
 sonar.sources=./test
